--- a/Rockenhaus.html
+++ b/Rockenhaus.html
@@ -12,7 +12,11 @@
     <p>This is a non-profit activism effort created by Zugrăvel Teodor in pursuit of justice for individuals who have suffered injustice and abuse at the hands of government agencies.</p>
     <p>Here you will find archives of the horrible crimes committed by government officials against innocent individuals.</p>
     <p>___________________________________________________________________________________</p>
-
+    
+    <img src="conrad.jpg" alt="Conrad Rockenhaus" style="width:6in; height:auto;">
+    <p>Conrad Rockenhaus is a 100% disabled U.S. combat veteran who has been the target of a multi-year campaign of retaliatory prosecution by federal officials.</p>
+    <p>He is a former TOR operator and when he refused to help the FBI decrypt TOR trafic, the FBI lied about him using a "graphics driver to access the dark web”</p>
+    <p>to keep him in pre-trial detention for 3 years. Now he's been jailed again in Michigan on fraudulent violations, is being denied care for a head injury, and has no lawyer.</p>
     <h2>Video evidence archive:</h2>
     <video width="640" height="360" controls>
     <source src="U-S-Marshals-Raid-Home-of-Disabled-Veteran-on-Fraudulent-Warrant_720pFH.mp4" type="video/mp4">
