--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 </a>
 
 <h1>[CLOSED]</h1>
-<a href="wip.html" style="color: #52fc5288; text-decoration: none; font-weight: bold; font-size: 1.5rem; padding: 10px; border: 2px solid #00ff00; border-radius: 5px; transition: all 0.3s ease;">
+<a href="Ted.html" style="color: #52fc5288; text-decoration: none; font-weight: bold; font-size: 1.5rem; padding: 10px; border: 2px solid #00ff00; border-radius: 5px; transition: all 0.3s ease;">
     <h2 style="color: #52fc5288;">Theodore John Kaczynski</h2>
 </a>
 <a href="wip.html" style="color: #52fc5288; text-decoration: none; font-weight: bold; font-size: 1.5rem; padding: 10px; border: 2px solid #00ff00; border-radius: 5px; transition: all 0.3s ease;">
