--- a/Ted.html
+++ b/Ted.html
@@ -15,7 +15,7 @@
     
     <img src="Ted.jpg" alt="Theodore John Kaczynski" style="width:4in; height:auto;">
     <p>Theodore John Kaczynski was a very intelligent mathematician and Harvard student.</p>
-    <p>After he was enrolled without his consent in the CIA MKultra experiment and experienced extreme psychological torture, and then he started to hate society but kept his inteligence.</p>
+    <p>After he was enrolled without his consent in the CIA MKultra experiment and experienced extreme psychological torture, he started to hate society but kept his inteligence.</p>
     <p>He became a terrorist known as the University and Airline Bomber or Unabomber for short, his identity remained a mystery until his brother recognized him and turned him in.</p>
     <p>He was sentenced to life in prison where he died.</p>
     <h2>Text evidence archive:</h2>
