--- a/Ted.html
+++ b/Ted.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>The Glow-Hunting Project</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="icon" href="CIA.png" />
 </head>
 <body>
     <img src="CIA.png" alt="CIA glowie" style="width:3in; height:auto;">
