--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <h1>The Glow-Hunting Project</h1>
     <p>This is a non-profit activism effort created by Zugrăvel Teodor in pursuit of justice for individuals who have suffered injustice and abuse at the hands of government agencies.</p>
     <p>Here you will find archives of the horrible crimes committed by government officials against innocent individuals.</p>
+    <p>This site is for informational purposes only.</p>
     <p>___________________________________________________________________________________</p>
 
 <h1>[OPEN]</h1>
