--- a/Rockenhaus.html
+++ b/Rockenhaus.html
@@ -12,7 +12,7 @@
     <h1>The Glow-Hunting Project</h1>
     <p>This is a non-profit activism effort created by Zugrăvel Teodor in pursuit of justice for individuals who have suffered injustice and abuse at the hands of government agencies.</p>
     <p>Here you will find archives of the horrible crimes committed by government officials against innocent individuals.</p>
-    <p><strong>Disclaimer:</strong> This site is for informational and educational purposes only. It may contain sensitive topics such as government misconduct, abuse, or violence. Viewer discretion is advised.
+    <p><strong>Disclaimer:</strong> This site is for informational and educational purposes only. It may contain sensitive topics such as government misconduct, abuse, or violence. Viewer discretion is advised.</p>
     <p>The content reflects the views of the contributors, including my own, and does not constitute legal or professional advice.</p>
     <p>___________________________________________________________________________________</p>
     
