--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
     <p>__________________________________</p>
     <p>Copyright © Zugrăvel Teodor – 2025</p>
     <p>zugravelteodor@protonmail.com</p>
-    <p>zugravel-teodor.github.io</p>
+    <a href="https://zugravel-teodor.github.io/">Website</a>
     <p><a href="LICENSE">This website is licensed under the AGPLv3 license</a>.</p>
 
     
