--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
     <p>___________________________________________________________________________________</p>
 
 <h1>[OPEN]</h1>
+<p>People who are waiting for justice:</p>
 <a href="Rockenhaus.html" style="color: #52fc5288; text-decoration: none; font-weight: bold; font-size: 1.5rem; padding: 10px; border: 2px solid #00ff00; border-radius: 5px; transition: all 0.3s ease;">
     <h2 style="color: #52fc5288;">Conrad Rockenhaus</h2>
 </a>
@@ -25,16 +26,33 @@
 </a>
 
 <h1>[CLOSED]</h1>
+<p>People that never got the justice they deserved:</p>
 <a href="Ted.html" style="color: #52fc5288; text-decoration: none; font-weight: bold; font-size: 1.5rem; padding: 10px; border: 2px solid #00ff00; border-radius: 5px; transition: all 0.3s ease;">
     <h2 style="color: #52fc5288;">Theodore John Kaczynski</h2>
 </a>
 <a href="wip.html" style="color: #52fc5288; text-decoration: none; font-weight: bold; font-size: 1.5rem; padding: 10px; border: 2px solid #00ff00; border-radius: 5px; transition: all 0.3s ease;">
     <h2 style="color: #52fc5288;">Jonathan James</h2>
 </a>
+<a href="wip.html" style="color: #52fc5288; text-decoration: none; font-weight: bold; font-size: 1.5rem; padding: 10px; border: 2px solid #00ff00; border-radius: 5px; transition: all 0.3s ease;">
+    <h2 style="color: #52fc5288;">Edward Snowden</h2>
+</a>
 
 <h1>[SOLVED]</h1>
+<p>People who got the justice they deserved:</p>
 <a href="wip.html" style="color: #52fc5288; text-decoration: none; font-weight: bold; font-size: 1.5rem; padding: 10px; border: 2px solid #00ff00; border-radius: 5px; transition: all 0.3s ease;">
     <h2 style="color: #52fc5288;">Ross Ulbricht</h2>
+</a>
+
+<h1>[OTHER STUFF]</h1>
+<p>Other interesting stuff:</p>
+<a href="wip.html" style="color: #52fc5288; text-decoration: none; font-weight: bold; font-size: 1.5rem; padding: 10px; border: 2px solid #00ff00; border-radius: 5px; transition: all 0.3s ease;">
+    <h2 style="color: #52fc5288;">About TGHP</h2>
+</a>
+<a href="wip.html" style="color: #52fc5288; text-decoration: none; font-weight: bold; font-size: 1.5rem; padding: 10px; border: 2px solid #00ff00; border-radius: 5px; transition: all 0.3s ease;">
+    <h2 style="color: #52fc5288;">The MKultra experiment</h2>
+</a>
+<a href="wip.html" style="color: #52fc5288; text-decoration: none; font-weight: bold; font-size: 1.5rem; padding: 10px; border: 2px solid #00ff00; border-radius: 5px; transition: all 0.3s ease;">
+    <h2 style="color: #52fc5288;">Censorship & Mass surveillance</h2>
 </a>
 
 
